--- a/README
+++ b/README
@@ -17,8 +17,8 @@
 
 . Include both into your project. 
 
-. In order to use these files, you'll also need to compile vbo_Utilities, CTexture, and
-  CPolyModel into your project. 
+. In order to use these files, you'll also need to compile vbo_Utilities, CTexture,
+  Bone and Transformation into your project. 
   The respective .h and .c files for these modules are found in the repository
   git@github.com:cosmiczilch/misc_opengl_utilities
   [ https://github.com/cosmiczilch/misc_opengl_utilities ]
@@ -57,4 +57,6 @@
 
 # export material properties
 
+
+V! Must make bone stuff work w/ repeated vertices from textures
 
